# MLOps-Spotify

./: .gitignore  .ruff.toml  api.md  app.py  main.py  pyproject.toml  ref_cmd.md
ml_pipeline/: definitions.py
ml_pipeline/assets/: clean_asset.py  clean_assets.py  data.py  data_asset.py  data_assets.py  features.py  features_asset.py  features_assets.py  metrics_assets.py  model.py  model_asset.py  model_assets.py  split_assets.py
ml_pipeline/config/: config.yaml
ml_pipeline/io_managers/: custom_io_manager.py
ml_pipeline/resources/: mlflow_resource.py  mlflow_resoure.py
ml_pipeline/utils/: feature_engineering.py  model_utils.py  preprocessing.py
notebook/: model_performance_summary.csv  refac.ipynb  spotify.ipynb  spotify1.ipynb  spotify2.ipynb  spotify_abd.ipynb  top_50_recommendations.csv
