[project]
   name = "ml_pipeline"
   version = "0.1.0"
   description = "MLOps pipeline for Spotify ML"
   requires-python = ">=3.11"
   dependencies = [
        "dagster==1.12.2",
        "dagster-webserver==1.12.2",
        "mlflow==2.12.1",
        "fastapi>=0.121.2",
        "uvicorn>=0.38.0",
        "pandas==2.2.3",
        "numpy<2",
        "scikit-learn==1.5.2",
        "xgboost>=2.1.1",
        "pydantic>=2.5.0",
        "python-dotenv>=1.0.0",
        "ruff>=0.6.0",
        "pyright>=1.1.336",
        "pytest>=8.0.0",
        "ipykernel>=6.29",
        "kagglehub>=0.3.13",
        "seaborn>=0.13.2",
    ]

   [build-system]
   requires = ["hatchling"]
   build-backend = "hatchling.build"